--- a/OrderBook/OrderBook.csproj
+++ b/OrderBook/OrderBook.csproj
@@ -10,5 +10,9 @@
     <Folder Include="Services\" />
     <Folder Include="DTO\" />
     <Folder Include="DTO\Orders\" />
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.7" />
   </ItemGroup>
 </Project>
