--- a/OrderBook/log4net.config
+++ b/OrderBook/log4net.config
@@ -5,19 +5,17 @@
       <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
     </layout>
   </appender>
-  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="logs_" />
-    <appendToFile value="true" />
-    <rollingStyle value="Date" />
-    <datePattern value="yyyyMMdd'.log'" />
-    <staticLogFileName value="false" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
-    </layout>
+  <appender name="ElasticSearchAppender" type="log4stash.ElasticSearchAppender, log4stash">
+    <Server>localhost</Server>
+    <Port>9200</Port>
+    <IndexName>log_test</IndexName>
+    <SerializeObjects>False</SerializeObjects> <!--allows for object logging if true-->
+    <Ssl>False</Ssl>
+    <AllowSelfSignedServerCert>True</AllowSelfSignedServerCert>
   </appender>
   <root>
     <level value="INFO"/>
     <appender-ref ref="ConsoleAppender" />
-    <appender-ref ref="RollingFileAppender" />
+    <appender-ref ref="ElasticSearchAppender" />
   </root>
 </log4net>
